# monorepo-microservices

./: .gitignore  README.md
auth/: pyproject.toml
auth/src/: config.py  main.py
