[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Norayr Kokhlikyan"]
readme = "README.md"
package-mode = false
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


